compiler-frontend/parsing/tests/snapshots/parser__expression_do_bind.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..55
      ModuleHeader@0..25
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..19
          UPPER@7..19 "ExpressionDo"
        Annotation@19..20
          TEXT@19..20 " "
        WHERE@20..25 "where"
      LAYOUT_START@25..25 ""
      ModuleStatements@25..54
        ValueEquation@25..54
          Annotation@25..27
            TEXT@25..27 "\n\n"
          LOWER@27..31 "main"
          Unconditional@31..54
            Annotation@31..32
              TEXT@31..32 " "
            EQUAL@32..33 "="
            WhereExpression@33..54
              ExpressionDo@33..54
                Annotation@33..34
                  TEXT@33..34 " "
                DO@34..36 "do"
                DoStatements@36..54
                  LAYOUT_START@36..36 ""
                  DoStatementBind@36..54
                    BinderVariable@36..43
                      Annotation@36..39
                        TEXT@36..39 "\n  "
                      LOWER@39..43 "life"
                    Annotation@43..44
                      TEXT@43..44 " "
                    LEFT_ARROW@44..46 "<-"
                    ExpressionApplicationChain@46..54
                      ExpressionVariable@46..51
                        Annotation@46..47
                          TEXT@46..47 " "
                        QualifiedName@47..51
                          LOWER@47..51 "pure"
                      ExpressionTermArgument@51..54
                        ExpressionInteger@51..54
                          Annotation@51..52
                            TEXT@51..52 " "
                          INTEGER@52..54 "42"
                  LAYOUT_END@54..54 ""
      LAYOUT_END@54..54 ""
      Annotation@54..55
        TEXT@54..55 "\n"
      END_OF_FILE@55..55 ""
    ,
    [],
)
