compiler-frontend/parsing/tests/snapshots/parser__expression_do_let.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..56
      ModuleHeader@0..28
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..22
          UPPER@7..22 "ExpressionDoLet"
        Annotation@22..23
          TEXT@22..23 " "
        WHERE@23..28 "where"
      LAYOUT_START@28..28 ""
      ModuleStatements@28..55
        ValueEquation@28..55
          Annotation@28..30
            TEXT@28..30 "\n\n"
          LOWER@30..34 "main"
          Unconditional@34..55
            Annotation@34..35
              TEXT@34..35 " "
            EQUAL@35..36 "="
            WhereExpression@36..55
              ExpressionDo@36..55
                Annotation@36..37
                  TEXT@36..37 " "
                DO@37..39 "do"
                DoStatements@39..55
                  LAYOUT_START@39..39 ""
                  DoStatementLet@39..55
                    Annotation@39..42
                      TEXT@39..42 "\n  "
                    LET@42..45 "let"
                    LetBindingStatements@45..55
                      LAYOUT_START@45..45 ""
                      LetBindingEquation@45..55
                        Annotation@45..46
                          TEXT@45..46 " "
                        LOWER@46..50 "life"
                        Unconditional@50..55
                          Annotation@50..51
                            TEXT@50..51 " "
                          EQUAL@51..52 "="
                          WhereExpression@52..55
                            ExpressionInteger@52..55
                              Annotation@52..53
                                TEXT@52..53 " "
                              INTEGER@53..55 "42"
                      LAYOUT_END@55..55 ""
                  LAYOUT_END@55..55 ""
      LAYOUT_END@55..55 ""
      Annotation@55..56
        TEXT@55..56 "\n"
      END_OF_FILE@56..56 ""
    ,
    [],
)
