compiler-frontend/parsing/tests/snapshots/parser__expression_if_then_else.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..69
      ModuleHeader@0..33
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..27
          UPPER@7..27 "ExpressionIfThenElse"
        Annotation@27..28
          TEXT@27..28 " "
        WHERE@28..33 "where"
      LAYOUT_START@33..33 ""
      ModuleStatements@33..68
        ValueEquation@33..68
          Annotation@33..35
            TEXT@33..35 "\n\n"
          LOWER@35..47 "if_then_else"
          Unconditional@47..68
            Annotation@47..48
              TEXT@47..48 " "
            EQUAL@48..49 "="
            WhereExpression@49..68
              ExpressionIfThenElse@49..68
                Annotation@49..50
                  TEXT@49..50 " "
                IF@50..52 "if"
                ExpressionIf@52..54
                  ExpressionVariable@52..54
                    Annotation@52..53
                      TEXT@52..53 " "
                    QualifiedName@53..54
                      LOWER@53..54 "x"
                Annotation@54..55
                  TEXT@54..55 " "
                THEN@55..59 "then"
                ExpressionThen@59..61
                  ExpressionVariable@59..61
                    Annotation@59..60
                      TEXT@59..60 " "
                    QualifiedName@60..61
                      LOWER@60..61 "y"
                Annotation@61..62
                  TEXT@61..62 " "
                ELSE@62..66 "else"
                ExpressionElse@66..68
                  ExpressionVariable@66..68
                    Annotation@66..67
                      TEXT@66..67 " "
                    QualifiedName@67..68
                      LOWER@67..68 "z"
      LAYOUT_END@68..68 ""
      Annotation@68..69
        TEXT@68..69 "\n"
      END_OF_FILE@69..69 ""
    ,
    [],
)
